# dotwarden

./: .gitignore  Makefile  main.py  pyproject.toml  test.py
dotwarden/: __init__.py  dotwarden.py  word_bank.py
src/: fwarden.py
