[tool.poetry]
name = "warden"
version = "1.0.0"
description = "a utility for generating hidden random . directories"
authors = ["Jaffar <jaffar.almaleki@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
