[tool.poetry]
name = "dotwarden"
version = "1.0.5"
description = "a utility for generating hidden random . directories"
authors = ["Jaffar <jaffar.almaleki@gmail.com>"]
homepage = "https://github.com/JaffarA/dotwarden"
repository = "https://github.com/JaffarA/dotwarden"
readme = "README.md"
license = "GPLv3"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.284"


[tool.black]
line-length = 88


[tool.isort]
profile = "black"


[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
