[tool.poetry]
name = "dotwarden"
version = "1.0.6"
description = "a utility for generating hidden random . directories"
authors = ["Jaffar <jaffar.almaleki@gmail.com>"]
homepage = "https://github.com/JaffarA/dotwarden"
repository = "https://github.com/JaffarA/dotwarden"
readme = "README.md"
license = "GPLv3"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
ruff = "*"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
line-length = 120  # to keep ruff happy
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
